[package]
name = "ddnsfw"
version = "2.2.0"
edition = "2021"
description = "Ultra-lightweight DDNS-based iptables firewall synchronizer"
license = "MIT"

[dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
strip = true         # Strip symbols
panic = "abort"      # No unwinding
